--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ nav .nav-link {
 .hero-section {
   height: 100vh;
   width: 100%;
-  background-image: url(../img/hero-1.png);
+  background-image: url(../img/hero-1.jpeg);
   background-position: right;
   background-repeat: no-repeat;
   background-size: contain;
