--- a/css/style.css
+++ b/css/style.css
@@ -67,9 +67,9 @@ nav .nav-link {
   height: 100vh;
   width: 100%;
   background-image: url(../img/hero-1.jpeg);
-  background-position: right;
+  background-position: top right;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 36%;
   display: flex;
   align-items: center;
   border-bottom: 10px solid #fff;
